#pragma once
#include <SFML/Graphics.hpp>

class Jugador
{
private:

public:
   
};

