class Animal
{
private:
    
public:
    Animal() {}
    ~Animal() {}
};