class Corazon
{
private:
    
public:
    Corazon() {}
    ~Corazon() {}
};