class Juguete
{
private:
    
public:
    Juguete() {}
    ~Juguete() {}
};