@startuml SnakeGame
class Juego
class Jugador 
class Snake
class Mapa
class Food
Class Score
class Walls
class Sounds


Metaclass draw

Juego "1" *-- "1" Jugador
Jugador <|--Snake




Juego *-- Mapa
Mapa *-- Walls
Mapa o-- draw

Snake o-- Score

Food o-- Sounds


class Perro
class Juguete
class Corazon
class Animal

Perro --|> Animal
Perro o-- Juguete
Perro *-- Corazon


@enduml